update the YUICompressor to a more up to date version, a bit beta though. remove the special made resourcereferences as these only get us into trouble. users should set the compressor from now on.
svn path=/trunk/; revision=1010